--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flatpickr": "^4.6.13",
     "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
